--- a/conda.yaml
+++ b/conda.yaml
@@ -1,13 +1,11 @@
 # This file may be used to create an environment using:
-# $ conda env create --name <env> --file <this file>
+# $ conda env create --file <this file>
+name: hawaiian-pronunciation
 channels:
   - defaults
   - conda-forge
 dependencies:
-  - python=3.9
   - pip
   - pip:
-    - setuptools
     - pytest
-    - sphinx
 
